convite service test